hphp/test/zend/good/ext/hash/tests/bug64745.php.skipif
<?php extension_loaded('hash') or die('skip'); ?>