hphp/test/zend/bad/ext/xmlreader/tests/bug51936.php.skipif
<?php
extension_loaded("xmlreader") or die("skip requires xmlreader");
?>